--- a/templates/home.html
+++ b/templates/home.html
@@ -137,7 +137,7 @@
         </div>
     </form>
     <h2>
-       THE  prediction is {{results}}
+       The  prediction is {{results}}
     </h2>
     </div>
    <body>
